:lipstick: Ensure default file form is not visible

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,3 +15,8 @@
 .gallery {
     padding-top: 3.5em;
 }
+
+.file-picker {
+    display: none;
+    color: transparent;
+}
